--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
           financial data.
         </p>
         <h3>
-          <a href="http://localhost:3000/">Try it for yourself<i class="fas fa-angle-double-right"></i></a>
+          <a href="http://localhost:3000/">Try it for yourself <i class="fas fa-angle-double-right"></i></a>
         </h3>
       </div>
       <!-- content-wrap -->
@@ -109,8 +109,7 @@
 </g>
 </svg>
     </div>
-
-    <!-- <div class="input-fields">
+    <div class="input-fields">
       <div class="user-data-input">
         <form id="data-form">
           <input type="text" id="data-input" placeholder="revenue" />
@@ -123,10 +122,10 @@
     </div>
     input-fields
   </div>
-  graph-container -->
+  graph-container
 
   <!-- ** this could be a partial ** -->
-  <!-- <table>
+  <table>
     <thead>
       <tr>
         <th>Company Name</th>
@@ -194,7 +193,7 @@
       </tbody>		
     </tbody>
   </table>
-  end of table -->
+  end of table
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"
   integrity="sha256-oUJV5o/Jn8W0qLMjwTBwrGf0J3WRdwb9OxR7Q2gQpdo=" crossorigin="anonymous"></script>
