--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,8 +50,7 @@
   </div>
   <!-- container -->
 
-
-  <!-- USER CODE -->
+  <!-- to be moved to /USER -->
   <div class="graph-container">
     <div class="graph">
       <!-- <img src="/svg/circle-graph-grouping-01.svg" alt="" /> -->
@@ -60,7 +59,7 @@
 <g id="sixth-col">
 	<circle fill="#F2B9BE" cx="380.6" cy="545.9" r="77.2"/>
 </g>
-<g id="fifth-col">
+<g id="fifth-col" transform="scale(4)">
 	<circle fill="#ECC5BF" cx="452" cy="420.2" r="45.8"/>
 </g>
 <g id="fourth-col">
@@ -109,7 +108,7 @@
 </g>
 </svg>
     </div>
-    <div class="input-fields">
+    <!-- <div class="input-fields">
       <div class="user-data-input">
         <form id="data-form">
           <input type="text" id="data-input" placeholder="revenue" />
@@ -119,83 +118,14 @@
         </form>
       </div>
       <form method="GET" action=""></form>
-    </div>
-    input-fields
+    </div> -->
+    <!-- input-fields -->
   </div>
-  graph-container
-
-  <!-- ** this could be a partial ** -->
-  <table>
-    <thead>
-      <tr>
-        <th>Company Name</th>
-        <th>2019</th>
-        <th>2020</th>
-        <th>2021</th>
-        <th>2022</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tbody class="labels">
-        <tr>
-          <td colspan="5">
-            <label for="accounting">Revenue</label>
-            <input type="checkbox" name="accounting" id="accounting" data-toggle="toggle">
-          </td>
-        </tr>
-      </tbody>
-      <tbody class="hide">
-        <tr style="background-color: #d4fbc4;">
-          <td>Australia</td>
-          <td>$7,685.00</td>
-          <td>$3,544.00</td>
-          <td>$5,834.00</td>
-          <td>$10,583.00</td>
-        </tr>
-        <tr style="background-color: #d8f1c4;">
-          <td>Central America</td>
-          <td>$7,685.00</td>
-          <td>$3,544.00</td>
-          <td>$5,834.00</td>
-          <td>$10,583.00</td>
-        </tr>
-      </tbody>
-      <tbody class="labels">
-        <tr>
-          <td colspan="5">
-            <label for="management">Management</label>
-            <input type="checkbox" name="management" id="management" data-toggle="toggle">
-          </td>
-        </tr>
-      </tbody>
-      <tbody class="hide">
-        <tr style="background-color: #e1dec1;">
-          <td>Australia</td>
-          <td>$7,685.00</td>
-          <td>$3,544.00</td>
-          <td>$5,834.00</td>
-          <td>$10,583.00</td>
-        </tr>
-        <tr style="background-color: #e6d2c0;">
-          <td>Central America</td>
-          <td>$7,685.00</td>
-          <td>$3,544.00</td>
-          <td>$5,834.00</td>
-          <td>$10,583.00</td>
-        </tr>
-        <tr style="background-color: #ecc5bf;">
-          <td>Europe</td>
-          <td>$7,685.00</td>
-          <td>$3,544.00</td>
-          <td>$5,834.00</td>
-          <td>$10,583.00</td>
-        </tr>
-      </tbody>		
-    </tbody>
-  </table>
-  end of table
+  <!-- graph-container -->
+  
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"
+    <!-- jq/greensock -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"
   integrity="sha256-oUJV5o/Jn8W0qLMjwTBwrGf0J3WRdwb9OxR7Q2gQpdo=" crossorigin="anonymous"></script>
 <script type="module" src="javascripts/main.js"></script>
 <script type="module" src="javascripts/game-controls.js"></script>
