fixing weird css gaps

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
         </h3>
       </div>
       <!-- content-wrap -->
-      <footer><i class="fas fa-chevron-down"></i></footer>
+      <!-- <footer><i class="fas fa-chevron-down"></i></footer> -->
     </div>
     <!-- content -->
     <div class="content-side">
