--- a/views/user.ejs
+++ b/views/user.ejs
@@ -26,6 +26,9 @@
   <script type="module" src="javascripts/main.js"></script>
   <script type="module" src="javascripts/interact.js"></script>
 
+  <!-- paper.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.12.15/paper-full.min.js" integrity="sha512-ovjLI1ZcZe6bw+ImQ21r+sv8q/Vwob2kq7tFidK6E1LWfi0T4uobbmpfEU1//a9h9o5Kkt+MnMWf6rWlg0EiMw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  
 <!-- ----------X add scripts here X---------- -->
 
   <!-- <%= for loop %> -->
