--- a/views/user.ejs
+++ b/views/user.ejs
@@ -24,46 +24,45 @@
     integrity="sha256-oUJV5o/Jn8W0qLMjwTBwrGf0J3WRdwb9OxR7Q2gQpdo=" crossorigin="anonymous"></script>
 
   <script type="module" src="javascripts/main.js"></script>
-  <script type="module" src="javascripts/interact.js"></script>
+  <!-- <script type="module" src="javascripts/interact.js"></script> -->
 
-  <!-- paper.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.12.15/paper-full.min.js" integrity="sha512-ovjLI1ZcZe6bw+ImQ21r+sv8q/Vwob2kq7tFidK6E1LWfi0T4uobbmpfEU1//a9h9o5Kkt+MnMWf6rWlg0EiMw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  
-<!-- ----------X add scripts here X---------- -->
+  <!-- ----------X add scripts here X---------- -->
 
   <!-- <%= for loop %> -->
   <!-- <title><% user %></title> -->
   <title>user</title>
-  
+
 </head>
+
 <body>
-  
+
   <nav>
     <i class="fas fa-bars"></i>
-  <div class="drop-down">
-    <div class="created-graphs">
-    <!-- your files -->
+    <div class="drop-down">
+      <div class="created-graphs">
+        <!-- your files -->
+      </div>
     </div>
-  </div>
-  <button id="logout">Logout</button>
+    <button id="logout">Logout</button>
   </nav>
 
-<!-- ^^ nav ^^  -->
+  <!-- ^^ nav ^^  -->
 
   <div class="container">
     <div class="input-fields">
       <div id="data">
-      <!-- insert input fields for graph here -->
-      <!-- submit/save button -->
+        <!-- insert input fields for graph here -->
+        <!-- submit/save button -->
       </div>
     </div>
-    <div class="content">
+
       <!-- CIRCLE GRAPH svg viewbox and logic here -->
     </div>
-    
+
     <div class="right-hand-drawer">
       <!-- incase we need a sliding right hand drawer -->
     </div>
   </div>
 </body>
+
 </html>
