added js/jq toggle scripts

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,9 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
 
+    <script type="module" src="javascripts/main.js"></script>
+    <script type="module" src="javascripts/interact.js"></script>
+
       <!-- paper.js -->
       <script type="module" src="javascripts/papr.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.12.15/paper-full.min.js"
