--- a/views/user.ejs
+++ b/views/user.ejs
@@ -24,7 +24,7 @@
     integrity="sha256-oUJV5o/Jn8W0qLMjwTBwrGf0J3WRdwb9OxR7Q2gQpdo=" crossorigin="anonymous"></script>
 
   <script type="module" src="javascripts/main.js"></script>
-  <!-- <script type="module" src="javascripts/interact.js"></script> -->
+  <script type="module" src="javascripts/interact.js"></script>
 
   <!-- ----------X add scripts here X---------- -->
 
