--- a/views/user.ejs
+++ b/views/user.ejs
@@ -55,13 +55,14 @@
         <!-- submit/save button -->
       </div>
     </div>
-
+    <div class="cotent">
       <!-- CIRCLE GRAPH svg viewbox and logic here -->
     </div>
+  </div>
 
-    <div class="right-hand-drawer">
-      <!-- incase we need a sliding right hand drawer -->
-    </div>
+  <div class="right-hand-drawer">
+    <!-- incase we need a sliding right hand drawer -->
+  </div>
   </div>
 </body>
 
